fixed spacing issues with header

--- a/src/scss/Header.scss
+++ b/src/scss/Header.scss
@@ -7,11 +7,11 @@ header {
         margin: auto;
         /* Heading */
         h1 {
-            margin-top: 25px;
+            margin-top: 14px;
             padding: 4px 30px;
             color: rgba(71, 71, 71, 0.897);
             text-transform: uppercase;
-            font-size: 21px;
+            font-size: 20px;
             font-family: 'Merienda One', Helvetica, sans-serif;
         }
         /* List items ("links") */
@@ -32,8 +32,8 @@ header {
         }
         /* Navigation Bar */
         nav {
-            margin-top: 8px;
-            padding: 10px 30px;
+            margin-top: 6px;
+            padding: 0 30px;
         }
     }
 }
